# edu-advent-2025

./: README.md  advent.cabal  default.nix
include/: header.hs
lib/: Advent.hs  UnionFind.hs
src/: day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs
